# facescrape

./: .gitignore  .gitmodules  README.md  config.py  database.py  diagnostic_test.py  pyproject.toml  reports.py  requirements.txt  scanner.py  search_terms.py  setup.sh  setup_cron.py  test_ai_pipeline.py
scrapers/: ebay_scraper.py  marketplace_scraper.py
services/: arbitrage.py  discord_notifier.py  ebay_lookup.py  price_lookup.py  pricecharting_lookup.py  recheck.py
utils/: ai_matcher.py  listing_parser.py  paths.py  pickup_cost.py  search_term_generator.py  stealth_helpers.py  title_identifier.py
